<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.audiotool.noisecancel.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/model"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/model_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/Model"
            android:scrollHorizontally="false"
            android:text="@string/none"
            android:textSize="15sp" />

        <Button
            android:id="@+id/switch_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/switchtext"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/new_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:text="@string/record_new"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Button
            android:id="@+id/choose_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/choose_file"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="#d6ecff"
                android:padding="8dp">

                <TextView
                    android:id="@+id/original_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/original_audio"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/original_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/original_label"
                    android:text="@string/no_file_chosen"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/play_original"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/original_file"
                    android:layout_alignStart="@id/original_file"
                    android:text="@string/play" />

                <Button
                    android:id="@+id/stop_original"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/play_original"
                    android:layout_toEndOf="@id/play_original"
                    android:text="@string/stop" />

                <Button
                    android:id="@+id/run"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/play_original"
                    android:layout_toEndOf="@id/stop_original"
                    android:text="@string/run" />

                <com.audiotool.noisecancel.SpectrogramView
                    android:id="@+id/original_SV"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:layout_below="@id/play_original"
                    android:layout_alignStart="@id/play_original"
                    android:layout_marginTop="4dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#d6ecff"
                android:padding="8dp">

                <TextView
                    android:id="@+id/clean_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noise_cancel_audio"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/clean_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/clean_label"
                    android:text="@string/no_file_chosen"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/play_clean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/clean_file"
                    android:layout_alignStart="@id/clean_file"
                    android:text="@string/play" />

                <Button
                    android:id="@+id/stop_clean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/play_clean"
                    android:layout_toEndOf="@id/play_clean"
                    android:text="@string/stop" />

                <com.audiotool.noisecancel.SpectrogramView
                    android:id="@+id/clean_SV"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:layout_below="@id/play_clean"
                    android:layout_alignStart="@id/play_clean"
                    android:layout_marginTop="4dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>